# chaos-viewer-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  claims-api.md  ecosystem.md  projects.md  prompt-templates.md  schema.md
src/: claims.rs  clipboard.rs  conventions.rs  discover.rs  grok_launch.rs  http.rs  lib.rs  load.rs  main.rs  prioritize.rs  projects.rs  prompt.rs  schema.rs  templates.rs  tools_catalog.rs  treemap.rs
src/tui/: mod.rs  theme.rs
tests/fixtures/: chaos-db.json
tests/fixtures/details/: arm9.json
