[package]
name = "chaos-viewer-cli"
version = "0.1.0"
edition = "2021"
description = "Terminal progress atlas for matching-decompilation projects (Chaos Viewer schema)"
license = "MIT"
repository = "https://github.com/lunavyqo/chaos-viewer-cli"
readme = "README.md"
keywords = ["decomp", "cli", "tui", "progress"]
categories = ["command-line-utilities"]

[[bin]]
name = "chaos"
path = "src/main.rs"

[dependencies]
anyhow = "1"
arboard = "3"
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.28"
ratatui = "0.29"
# gzip: raw.githubusercontent.com serves multi-MB atlases compressed (~10× smaller).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
toml = "0.8"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"
